--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,13 +31,16 @@ dependencies = [
     "pandas>=2.0.0,<2.2.0",
     "json_logging>=1.3.0, <2.0.0",
     "sqlalchemy>=1.4.42,<2.0.0",
-    "pyodbc>=5.2.0,<6.0.0"
+    "pyodbc>=5.2.0,<6.0.0",
+    "jinja2>=3.1.2,<4.0.0",
+    "pyyaml>=6.0,<7.0"
 ]
 
 [project.optional-dependencies]
 airflow = [
     "airflow_provider_tm1>=0.5.1",
-    "apache_airflow>=2.4.0,<=2.11.0"
+    "apache_airflow>=2.4.0,<=2.11.0",
+    "jinja2>=3.1.2,<3.2.0"
 ]
 postgres= [
     "apache-airflow-providers-postgres>=3.3.0,<7.0.0"
