--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ pandas>=1.5.0,<2.2.0
 json_logging>=1.3.0,<2.0.0
 sqlalchemy>=1.4.42,<2.0.0
 pyodbc>=5.2.0,<6.0.0
-mdxpy>=1.2.0,<2.0.0
+jinja2>=3.1.2,<4.0.0
+pyyaml>=6.0,<7.0
