--- a/.github/workflows/test_and_build.yaml
+++ b/.github/workflows/test_and_build.yaml
@@ -24,6 +24,11 @@ jobs:
       group: ci-${{ github.ref }}
       cancel-in-progress: true
 
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: [ '3.9', '3.10', '3.11', '3.12', '3.13' ]
+
     steps:
     - name: Set up WireGuard
       uses: egor-tensin/setup-wireguard@v1
@@ -47,14 +52,16 @@ jobs:
 
     - uses: actions/checkout@v3
 
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v5
       with:
-        python-version: "3.10"
+        python-version: ${{ matrix.python-version }}
+        cache: 'pip'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install -r requirements-airflow.txt
         pip install -r requirements-dev.txt
         python -m build
 
