--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 TM1py>=2.1,<3.0
-pandas>=1.5.0,<2.2.0
+pandas>=2.0.0,<2.2.0; python_version < "3.13"
+pandas>=2.2.3,<2.4.0; python_version >= "3.13"
 json_logging>=1.3.0,<2.0.0
 sqlalchemy>=1.4.42,<2.0.0
 pyodbc>=5.2.0,<6.0.0
-jinja2>=3.1.2,<4.0.0
 pyyaml>=6.0,<7.0
