--- a/requirements-airflow.txt
+++ b/requirements-airflow.txt
@@ -1,5 +1,5 @@
 -r requirements.txt
 apache-airflow>=3.1.0; python_version >= "3.13"
-apache-airflow>=2.4.0<=2.11.0; python_version < "3.13"
+apache-airflow>=2.4.0,<=2.11.0; python_version < "3.13"
 airflow_provider_tm1>=0.5.1
-jinja2>=3.1.2<3.2.0
+jinja2>=3.1.2,<3.2.0
