--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ maintainers = [
 description = "A python module for TM1 Bedrock."
 readme = "README.md"
 license = "Apache-2.0"
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 keywords=["TM1", "IBM Cognos TM1", "Planning Analytics", "PA", "Cognos"]
 classifiers = [
     "Programming Language :: Python :: 3",
@@ -28,8 +28,7 @@ classifiers = [
 ]
 dependencies = [
     "TM1py>=2.1, <3.0",
-    "pandas>=2.0.0,<2.2.0; python_version<'3.13'",
-    "pandas>=2.2.3,<2.4.0; python_version>='3.13'",
+    "pandas>=2.3.3,<3.0.0",
     "json_logging>=1.3.0, <2.0.0",
     "sqlalchemy>=1.4.42,<2.0.0",
     "pyodbc>=5.2.0,<6.0.0",
@@ -38,16 +37,15 @@ dependencies = [
 
 [project.optional-dependencies]
 airflow = [
-    "apache-airflow>=3.1.0; python_version >= '3.13'",
     "apache-airflow>=2.4.0,<=2.11.0; python_version < '3.13'",
-    "airflow_provider_tm1>=0.5.1",
-    "jinja2>=3.1.2,<3.2.0"
+    "airflow_provider_tm1>=0.5.1; python_version < '3.13'",
+    "jinja2>=3.1.2,<3.2.0; python_version < '3.13'"
 ]
 postgres= [
-    "apache-airflow-providers-postgres>=3.3.0,<7.0.0"
+    "apache-airflow-providers-postgres>=3.3.0,<7.0.0; python_version < '3.13'"
 ]
 microsoft-mssql= [
-    "apache-airflow-providers-microsoft-mssql>=3.3.0,<7.0.0"
+    "apache-airflow-providers-microsoft-mssql>=3.3.0,<7.0.0; python_version < '3.13'"
 ]
 dev = [
     "parametrize_from_file>=0.20.0,<1.0.0",
