--- a/.github/workflows/pr_ci.yaml
+++ b/.github/workflows/pr_ci.yaml
@@ -1,9 +1,9 @@
-name: Build & Test with Python3.10
+name: Build & Test on Pull Request
 on:
   push:
-    branches-ignore:
-      - main
-  workflow_dispatch: {}
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 concurrency:
   group: ci-${{ github.ref }}
@@ -22,8 +22,14 @@ env:
   SQL_DB: ${{ secrets.SQL_DB }}
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
+
+    strategy:
+      fail-fast: false
+      max-parallel: 1
+      matrix:
+        python-version: [ '3.10', '3.11', '3.12', '3.13' ]
 
     steps:
     - name: Set up WireGuard
@@ -48,10 +54,11 @@ jobs:
 
     - uses: actions/checkout@v3
 
-    - name: Set up Python3.10
+    - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
-        python-version: "3.10"
+        python-version: ${{ matrix.python-version }}
+        cache: 'pip'
 
     - name: Install dependencies
       run: |
